--- a/geneva-street/package.json
+++ b/geneva-street/package.json
@@ -17,7 +17,8 @@
     "@mui/x-date-pickers": "^7.22.2",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
