--- a/geneva-street/package.json
+++ b/geneva-street/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.2",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
