--- a/geneva-street/package.json
+++ b/geneva-street/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0"
   },
