--- a/geneva-street/package.json
+++ b/geneva-street/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://nickjolshansky.github.io/GenevaStreetFrontEnd",
+  "homepage": "https://genevastreet.us",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
